--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/VAVA-Projekt
 excludes=
+file.reference.daypilot-lite-1.0.453.jar=D:\\patoh\\Pracovn\u00e1 plocha\\FIIT  dokumenty\\LS2\\VAVA\\daypilot-lite-1.0.453.jar
+file.reference.jdatepicker-2.0.3.jar=D:\\patoh\\Pracovn\u00e1 plocha\\FIIT  dokumenty\\LS2\\VAVA\\jdatepicker-2.0.3.jar
+file.reference.migcalendar.jar=D:\\patoh\\Pracovn\u00e1 plocha\\FIIT  dokumenty\\LS2\\VAVA\\migcalendar.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.migcalendar.jar}:\
+    ${file.reference.jdatepicker-2.0.3.jar}:\
+    ${file.reference.daypilot-lite-1.0.453.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
