--- a/src/sk/stu/fiit/bundle.properties
+++ b/src/sk/stu/fiit/bundle.properties
@@ -179,3 +179,14 @@ PROJECT\ ID=Project ID
 PROJECT\ NAME=Project Name
 ADMIN=admin
 NASTAVENIA=Settings
+LOGOUT=Log out
+TYPE_USER=Type
+YOUR_INFO=Your Info
+NAME_=Name
+PICTURE_=Picture
+TODOS_=Your ToDos
+Zle\ udaje=Zle udaje
+TASK_=Task
+TASK_N=Name
+DESC_TASK=Description
+TASKS_DET=TASKS
