--- a/src/sk/stu/fiit/bundle.properties
+++ b/src/sk/stu/fiit/bundle.properties
@@ -190,3 +190,7 @@ TASK_=Task
 TASK_N=Name
 DESC_TASK=Description
 TASKS_DET=TASKS
+PROJECTS_MAIN=Projects
+PROJECT_WIDGET=Project 
+TEAMMATES_WIDGET=Teammates
+NEW\ USER=New User
